src/parser/__tests__/__snapshots__/context-spec.js.snap
// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`syntaxError generates an accurate error string 1`] = `
"SyntaxError: 
let x: i32 = someUnknownToken;
             ^^^^^^^^^^^^^^^^^ unknown token
Test Error
  at test (test.walt:1:13)"
`;
